<resources>
    <string name="app_name">Atendimento</string>
    <string name="atendimento">Atendimento</string>
    <string name="email">E-Mail</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings relatedlogoogin -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="senha">Senha</string>
    <string name="cadastrese">Não Possui Login, Cadastre-se aqui</string>
    <string name="logar">Logar</string>
    <string name="nome">Nome</string>
    <string name="sair">Sair</string>
    <string name="facebook_app_id">779753262213464</string>
    <string name="fb_login_protocol_scheme">fb779753262213464</string>
    <string name="opcaoInicio">Como Gostaria de Realizar  o Login:</string>
    <string name="esqueciSenha">Esqueci a Senha</string>
    <string name="redefinirSenhaTexto">Informe o email e clique no botão abaixo para o que o e-mail, para a redefinição da senha seja enviado</string>
    <string name="enviarEmail">Enviar E-mail</string>
    <string name="loginEmail">Login com E-mail</string>
    <string name="cadastro">Cadastro: é necessário um e-mail válido e uma senha de no mínino 8 caracteres</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="configuracoes">Configurações</string>
    <string name="mostrarSenha">Mostrar Senha</string>
    <string name="favorSenha">Favor Insira a Senha</string>
    <string name="cancelarConta">Cancelar Conta</string>
    <string name="alterarSenha">Alterar Senha</string>
    <string name="empresas">Empresas</string>
    <string name="nomeEmpresa">Nome da Empresa</string>
    <string name="categorias">Categorias</string>
    <string name="redefinicaoSenha">Redefinição de senha por E-mail</string>
    <string name="telaPrincipal">Tela Inicial</string>
    <string name="digiteEmpresa">Digite a Empresa</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="deletar">Deletar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastrarEmpresa">Cadastrar Empresa</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="horarios">Horários</string>
    <string name="horariosFuncionamento">Período de trabalho(Em Horas)</string>
    <string name="inicio">Início</string>
    <string name="Fim">Fim</string>
    <string name="horarioInicial">00:00</string>
    <string name="horarioPadraoInicial">08:00</string>
    <string name="horarioPadraoFinal">18:00</string>
    <string name="horarioPadraoMeioDia">12:00</string>
    <string name="diasSemana">Selecione os dias da semana de funcionamento com os Horários</string>
    <string name="segunda">Segunda-Feira</string>
    <string name="terca">Terça-Feira</string>
    <string name="quarta">Quarta-Feira</string>
    <string name="quinta">Quinta-Feira</string>
    <string name="sexta">Sexta-Feira</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="diadisponivel">Dia disponível ?</string>
    <string name="duracao">Definir duração</string>
    <string name="definirIntervalo">Definir Intervalo</string>
    <string name="duracaoDescricao">Duração</string>
    <string name="horariosDisponiveis">Horários Disponíveis</string>
    <string name="situacao">Situação</string>
    <string name="title_activity_maps">Map</string>
    <string name="localizacao">Minha Localização</string>
</resources>
