<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.EmpresasActivity">

    <item
        android:id="@+id/item_deletarEmpresa"
        android:title="@string/deletar"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_trash"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_pesquisaEmpresa"
        android:title="@string/pesquisar"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_tela_Principal"
        android:title="@string/telaPrincipal"
        android:orderInCategory="200"
        app:showAsAction="never"
        />

    <item android:id="@+id/item_sair"
        android:title="@string/sair"
        android:orderInCategory="400"
        app:showAsAction="never" />

</menu>